{
    "name": "CampController",
    "maps": [
        {
            "name": "Camp",
            "id": "3ddb6de2-2851-4df9-b870-600ee330bd1a",
            "actions": [
                {
                    "name": "StartMap",
                    "type": "Button",
                    "id": "614f53fc-5e53-4989-bd58-7021f8a271a7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CloseMap",
                    "type": "Button",
                    "id": "f1f3461b-47b7-49ed-9c30-704a59dbc9ee",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextLevel",
                    "type": "Button",
                    "id": "ae97f2a0-877d-4e60-aff5-2fcb8184f089",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LastLevel",
                    "type": "Button",
                    "id": "5fa3c0ae-90e3-4127-b493-25894d3059b9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GoLevel",
                    "type": "Button",
                    "id": "a8d03349-4883-4553-9d69-abacb5c5c915",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "07625040-11ce-483e-8ebb-6471ae4126c1",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "570b2e77-04ad-4b2e-99bc-a4d23311a7ff",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f8a9ced-cb5e-477e-8f3e-902d98288a71",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e04e03f9-72c0-4a9d-91e8-7fb5ac0fe95d",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LastLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "021eec2f-fa0a-483b-99e4-eb4e6436d5a1",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LastLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4861a8b3-1cee-4281-8c97-4b3f687c94d2",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseMap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67eb232f-8d7b-458c-b093-9cc9115df6e7",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GoLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}